crates/typechecker/tests/snapshots/fixture_test__trait_basic.snap
---
source: crates/typechecker/tests/fixture_test.rs
assertion_line: 85
expression: snapshot
---
Point: fn(Int, Int) -> Point
main: fn() -> Bool
Eq$Point$eq: fn(Point, Point) -> Bool
